Added venue picture

--- a/_posts/2-1-1-art.md
+++ b/_posts/2-1-1-art.md
@@ -1,8 +1,10 @@
 ---
-title: "Art"
-bg: turquoise  #defined in _config.yml, can use html color like '#0fbfcf'
-color: white   #text color
-fa-icon: paint-brush
+title: The Venue
+bg: turquoise
+color: white
+"fa-icon": globe
+published: true
 ---
 
-#### A new section- oh the humanity!
+
+![computer history museum]({{site.baseurl}}/img/full-exterior.jpg)
